Improvements to streams in ai goals