@@ -5,7 +5,6 @@ import hexagonnico.buzzydrones.content.entity.DroneEntity;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import net.minecraft.core.BlockPos;
 import net.minecraft.world.entity.ai.goal.Goal;
@@ -48,12 +47,12 @@ public class FindTargetWithFilterGoal extends Goal {
 	private List<TargetStationBlockEntity> getNearbyTargets() {
 		BlockPos dronePos = this.droneEntity.blockPosition();
 		return BlockPos.betweenClosedStream(dronePos.offset(-15, -15, -15), dronePos.offset(15, 15, 15))
-				.map(pos -> this.droneEntity.level.getBlockEntity(pos))
-				.filter(blockEntity -> blockEntity instanceof TargetStationBlockEntity)
-				.map(blockEntity -> (TargetStationBlockEntity) blockEntity)
+				.map(this.droneEntity.level::getBlockEntity)
+				.filter(TargetStationBlockEntity.class::isInstance)
+				.map(TargetStationBlockEntity.class::cast)
 				.filter(this::filterAllows)
 				.sorted(Comparator.comparingDouble(blockEntity -> blockEntity.getDistance(this.droneEntity.blockPosition())))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	private boolean filterAllows(TargetStationBlockEntity blockEntity) {
